resolve issue with logo overlaying the hero image on small devices

--- a/src/css/components/divi/overrides.css
+++ b/src/css/components/divi/overrides.css
@@ -1,7 +1,3 @@
-.logo_container a {
-	display: inline-block;
-}
-
 @media (--bp-small) {
 	.page-template-default.et_fixed_nav.et_show_nav #page-container {
 		padding-top: 6.9375rem;
